# msal_streamlit_t2

./: README.md  pyproject.toml
msal_streamlit_authentication_test/: __init__.py
msal_streamlit_authentication_test/frontend/src/auth/: msal-auth.tsx
msal_streamlit_t2/: __init__.py
msal_streamlit_t2/frontend/: package-lock.json  package.json
msal_streamlit_t2/frontend/src/: Authentication.tsx
