[tool.poetry]
name = "msal_streamlit_t2"
version = "1.1.1"
description = "Streamlit Authentication library based on MSAL.JS"
readme = "README.md"
repository = "https://github.com/mstaal/msal_streamlit_t2"
authors = ["Michael Staal-Olsen"]
packages=[
    { include="msal_streamlit_t2" }
]
include = ["msal_streamlit_t2/frontend/dist/**/*"]
exclude = [
    "msal_streamlit_t2/frontend/index.html",
    "msal_streamlit_t2/frontend/public",
    "msal_streamlit_t2/frontend/src",
    "msal_streamlit_t2/frontend/tsconfig.json",
    "msal_streamlit_t2/frontend/tsconfig.node.json",
    "msal_streamlit_t2/frontend/package.json",
    "msal_streamlit_t2/frontend/package-lock.json",
    "msal_streamlit_t2/frontend/vite.config.ts",
]

[tool.poetry.dependencies]
python = ">=3.7"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
pytest = "6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
